# ChangeLog for dev-java/java-config
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.109 2006/09/03 01:51:48 nichoj Exp $

  03 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
  java-config-1.3.3-r1.ebuild:
  Removed PDEPEND on virtual/jdk, since we've improved the error message that
  occurs when they are not present in java-pkg.eclass

  31 Aug 2006; Joshua Nichols <nichoj@gentoo.org>
  java-config-1.3.1-r1.ebuild, java-config-1.3.2.ebuild,
  java-config-1.3.3.ebuild, +java-config-1.3.3-r1.ebuild,
  java-config-2.0.27.ebuild, java-config-2.0.27-r1.ebuild:
  Dropped alpha and hppa keywords. Improved post install message.
  java-config-1.3.3 now post-depends on a 1.4 or 1.3 JDK. This ensures that
  packages using generation-1 will be able to build properly with minimal
  amount of interference.

*java-config-1.3.3-r1 (30 Aug 2006)

  30 Aug 2006; Joshua Nichols <nichoj@gentoo.org>
  +java-config-1.3.3-r1.ebuild, java-config-2.0.27-r1.ebuild:
  Revision bump to java-config-1.3.3. It now post-depends on a 1.4 or 1.3 JDK
  for compatibility with the new Java system. Also improved the post install
  messages of both 1.x and 2.x.

*java-config-1.3.3 (28 Aug 2006)

  28 Aug 2006; Joshua Nichols <nichoj@gentoo.org> +java-config-1.3.3.ebuild:
  Version bump. Addresses a bug where if you set the system vm the first time
  after migrating, you get 4 or so lines of big red warnings.

*java-config-1.3.2 (27 Aug 2006)

  27 Aug 2006; Joshua Nichols <nichoj@gentoo.org> +java-config-1.3.2.ebuild:
  Version bump. Includes slightly smarter checks. For example, only checks
  /etv/env.d/java/20*. Also, complains about non-generation-2 VMs, and won't
  let them be set to the system vm.

  25 Aug 2006; Joshua Nichols <nichoj@gentoo.org> ChangeLog:
  Manifest fix, bug #145038

*java-config-2.0.27-r1 (25 Aug 2006)

  25 Aug 2006; Joshua Nichols <nichoj@gentoo.org>