@@ -1,0 +1,3 @@
+MD5 f515e737a28e01aedf51be0dacd929df java-config-1.3.4.tar.bz2 14905
+RMD160 689895f32edff3e383c8dac8a8988b48847b6b28 java-config-1.3.4.tar.bz2 14905
+SHA256 50a423abadfc13b391e575624c900b15b269ab72e226582d0c81fc9dd4b799e1 java-config-1.3.4.tar.bz2 14905
