@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/java-config
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.109 2006/09/03 01:51:48 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.110 2006/09/05 15:15:54 nichoj Exp $
+
+*java-config-1.3.4 (05 Sep 2006)
+
+  05 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
+  -java-config-1.3.1-r1.ebuild, -java-config-1.3.2.ebuild,
+  -java-config-1.3.3.ebuild, -java-config-1.3.3-r1.ebuild,
+  +java-config-1.3.4.ebuild:
+  Version bump to java-config-1 to fix bug #146241. Pruned old versions.
 
   03 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
   java-config-1.3.3-r1.ebuild:
